--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -23,6 +23,7 @@ body{
 }
 img{
     max-width: 100%;
+    height: auto;
 }
 .hero{
     padding: 41px 0;
@@ -52,3 +53,37 @@ img{
     color: var(--wihite);
     background-color: var(--green);
 }
+.some-vegetables{
+    padding: 41px 0;
+}
+.some-vegetables .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+.some-vegetables .container figure{
+    width: 50%;
+}
+.some-vegetables .container .col{
+    width: 40%;
+}
+.some-vegetables .container figure figcaption{
+    margin-top: 20px;
+    font-family: "Inter", sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 22.4px;
+}
+@media (max-width:768px){
+    .some-vegetables .container figure{
+        width: 100%;
+    }
+    .some-vegetables .container .col{
+        width: 100%;
+    }
+}
+/* @media (max-width:991px){
+
+} */
