--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -8,7 +8,7 @@
     font-family: "Inter", sans-serif; */
 }
 :root{
-    --wihite:#FFFFFF;
+    --white:#FFFFFF;
     --black:#000000;
     --green:#426B1F;
     --gainsboro:#E6E6E6;
@@ -20,7 +20,7 @@
     overflow: hidden;
 }
 body{
-    background-color: var(--wihite);
+    background-color: var(--white);
 }
 img{
     max-width: 100%;
@@ -51,7 +51,7 @@ img{
     font-size: 20px;
     font-weight: 600;
     border-radius: 8px;
-    color: var(--wihite);
+    color: var(--white);
     background-color: var(--green);
 }
 .some-vegetables{
