--- a/assets/styles/product.css
+++ b/assets/styles/product.css
@@ -27,3 +27,62 @@ img{
     max-width: 100%;
     height: auto;
 }
+.head-title{
+    padding: 20px 0 ;
+}
+.head-title .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    position: relative;
+    color: var(--black);
+}
+.head-title .container::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 90%;
+    height: 2px;
+    margin:auto;
+    background-color: var(--gainsboro);
+}
+.head-title .container .heading{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.head-title .container .heading h1{
+    font-family: "Newsreader", serif;
+    font-size: 64px;
+    font-weight: 400;
+}
+.head-title .container .heading p{
+    font-family: "Inter", sans-serif; 
+    font-size: 20px;
+}
+.head-title .container .heading p b{
+    font-weight: 500;
+}
+.head-title .container .heading p span{
+    font-weight: 300;
+}
+.head-title .container .sorts-btn{
+    display: inline-flex;
+    align-items: center;
+    gap: 20px;
+}
+.head-title .container .sorts-btn span{
+    display: inline-block;
+    padding: 10px 15px;
+    background-color: var(--white);
+    border: 1px solid var(--gainsboro);
+    font-family: "Inter", sans-serif; 
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 20px;
+}
+.head-title .container .sorts-btn span:first-child{
+    background-color: var(--green);
+    color: var(--white);
+}
